@@ -24,7 +24,7 @@ subjectProfileIntervalPlot(
   subsetData = NULL,
   subsetVar = NULL,
   subsetValue = NULL,
-  timeImpType = c("minimal", "data-by-subject", "none"),
+  timeImpType = c("minimal", "data-based", "none"),
   timeLim = NULL,
   timeLimData = NULL,
   timeLimStartVar = NULL,
@@ -114,7 +114,9 @@ Missing values in the subject variable are not retained
 in the filtered data.}
 
 \item{timeImpType}{String with imputation type: 'minimal' (default),
-'data-based' or 'none', see section: 'Time interval representation'.}
+'data-based' or 'none', see section: 'Time interval representation'.\cr
+This imputation type is not used if a dataset used to impute time is 
+specified.}
 
 \item{timeLim}{(optional) Vector of length 2 with time limits (x-axis).
 If not specified, these are extracted from the minimum \code{timeStartVar} 
@@ -122,13 +124,17 @@ and maximum \code{timeEndVar} per subject.\cr
 The time limits are stored as attributes of the plots,
 used to align the plots in the final report.}
 
-\item{timeLimData}{data.frame with data used to extract time limits per subject}
+\item{timeLimData}{Data.frame with data used to impute time
+in case some time records are missing in \code{data}, 
+see section: 'Time interval representation'.}
 
-\item{timeLimStartVar}{string, variable of \code{timeLimData} with time start}
+\item{timeLimStartVar}{String, variable of \code{timeLimData} with 
+start of the time interval.}
 
 \item{timeLimStartLab}{String, label for \code{timeLimeStartVar}.}
 
-\item{timeLimEndVar}{string, variable of \code{timeLimData} with time end}
+\item{timeLimEndVar}{String, variable of \code{timeLimData} with 
+end of the time interval.}
 
 \item{timeLimEndLab}{String, label for \code{timeLimEndVar}.}
 
@@ -249,7 +255,7 @@ for the specific subject (if available). If there are missing for a specific sub
 they are taken across subjects. If all time are missings, the range is set to 0 and Inf}
 \item{'none': }{no imputation is done}
 }}}
-The symbols displaedy at the start and end of the interval are:
+The symbols displayed at the start and end of the interval are:
 \itemize{
 \item{by default: }{
 \itemize{
