@@ -17,7 +17,8 @@
       - shape lab set to color lab if color but not shape var specified
     o subjectProfileLinePlot:
       - remove warning if ref var are missing
-      - no symbols: 'Missing start'/'Missing end' in case of no time imputation
+    o subjectProfileIntervalPlot
+      - correct typo: 'data-by-subject' -> 'data-based'
     o getPageVar:
       - fix when only one var is specified
           o subjectProfileEventPlot:
